ver 0.2: Algumas mini modificações

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#section_sobrenos">Sobre Nós</a>
     </header>
     <div id="main_banner">
+        <img src="./assets/figs/banner1.jpg" alt="">
         <h1 id="banner_title">O FUTURO É DECIDIDO PELO QUE FAZEMOS HOJE</h1>
     </div>
 
